# UtilityScripts

./: .gitignore  README.md  pyproject.toml
CMD_Scripts/: delayed_shoutdown.cmd  system_info.cmd
Python_Scripts/directory_structure/: directory_structure.py
Python_Scripts/file_diff/: pyproject.toml
Python_Scripts/google_takeout_parser/: __init__.py  google_takeout_parser.py  pyproject.toml
Python_Scripts/google_takeout_parser/Photos from 2018/: received_258415008103895.jpeg.json  received_258415008103895~2.jpeg.json
Python_Scripts/loading_bar/: loading_bar.py  pyproject.toml
Python_Scripts/loading_bar/loading_bar.egg-info/: PKG-INFO  SOURCES.txt
Python_Scripts/size_of_folders/: pyproject.toml  size_of_folders.py
Scripts/: file_diff.py
cpp_Scripts/: Break_reminder.cpp
cpp_Scripts/break_reminder/: Break_reminder.cpp
